@@ -1,3 +1,10 @@
+2004-05-22  Bruno Haible  <bruno@clisp.org>
+
+	* lispbibl.d (symbol_): Add a filler for LINUX_NOEXEC_HEAPCODES. Check
+	that the size is a multiple of varobject_alignment.
+	* genclisph.d (main): Update.
+	* constsym.d (LISPSYM_B): Add initializer for filler.
+
 2004-05-21  Bruno Haible  <bruno@clisp.org>
 
 	New heapcodes scheme for Linux/x86 systems.
